# pathsig

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
benchmarks/: benchmark.py
benchmarks/signature_benchmark_NVIDIA_GeForce_RTX_4090_float32/tables/: forward_performance.md  memory_usage.md  training_performance.md
benchmarks/signature_benchmark_NVIDIA_H100_80GB_HBM3_float32/tables/: forward_performance.md  memory_usage.md  training_performance.md
benchmarks/signature_benchmark_NVIDIA_H100_80GB_HBM3_float64/tables/: forward_performance.md  memory_usage.md  training_performance.md
docs/: conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: index.rst  logsignature.rst  projections.rst  projections_anisotropic.rst  projections_lyndon.rst  projections_words.rst  signature.rst
src/pathsig/: Signature.py  __init__.py  _autograd.py  _load.py  bindings.cpp  modules.py  ops.py  projections.py  pybindings.cpp
src/pathsig/backward/: sig_backward_kernels.cu  sig_backward_kernels.cuh  sig_backward_launch.cu  sig_backward_launch.cuh
src/pathsig/forward/: sig_kernels.cu  sig_kernels.cuh  sig_launch.cu  sig_launch.cuh
src/pathsig/signature_backward/: sig_backprop.cu  sig_backprop.cuh  sig_backprop_launch.cu  sig_backprop_launch.cuh
src/pathsig/signature_forward/: compute_sig.cu  compute_sig.cuh  compute_sig_launch.cu  compute_sig_launch.cuh
src/pathsig/utils/: SigDecomposition.cpp  SigDecomposition.h  extended_precision.cuh  sig_setup.cu  sig_setup.cuh  word_mappings.cuh
tests/: test_forward_backward.py  test_logsig.py  test_projections.py  test_sig.py  test_windows.py
