# pyproject.toml
[build-system]
requires = ["scikit-build-core>=0.10", "torch>=2.4"]
build-backend = "scikit_build_core.build"

[project]
name = "pathsig"
version = "0.1.7"
requires-python = ">=3.10"
dependencies = ["torch>=2.4"]

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.24"
ninja.version = ">=1.11"
cmake.build-type = "Release"
wheel.install-dir = "."